# gps-track-sys-emu

./: .gitignore  CMakeLists.txt  Device.cpp  Device.hpp  Emulator.cpp  Utils.cpp  Utils.hpp  script.sh  test_coverage.html
src/: Device.cpp  Device.hpp  Emulator.cpp  Utils.cpp  Utils.hpp
test/: testDevice.cpp  testUtils.cpp
